# MiniClaw

./: .gitignore  README.md  SPECIFICATION.md  TECHNICAL_SPEC.md  app.py  environment.yml  pyproject.toml
agent/: core.py  proactivity.py  prompts.py  reasoning.py
config/: settings.py
db/: todo_store.py
llm/: ollama_client.py
memory/: long_term.py  manager.py  short_term.py
tools/: memory_tool.py  registry.py  search.py  todo.py
ui/: chat_page.py  components.py  debug_page.py  sidebar.py
