[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "miniclaw"
version = "0.1.0"
description = "Local autonomous AI agent with Streamlit UI and Ollama backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.38,<2.0",
    "ollama>=0.4",
    "chromadb>=1.5.0,<2.0",
    "pydantic>=2.0,<3.0",
    "tiktoken>=0.7",
    "ddgs>=7.0",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
